# dispatcher_spike

./: CMakeLists.txt  README.md
cmake/: ConfigureProductVersion.cmake  FindUCX.cmake  MakeArtifact.cmake
src/: arrow_main.cpp  cuda_cpu_main.cu  cudf_main.cu
src/compute/: backend_register.h
src/select/: select.h
src/select/arrow/: select.cpp
src/select/cudf/: select.cu
